Copy Custom Property function does nothing with pose bones #41409

Closed
opened 2014-08-11 22:32:22 +02:00 by Matt Heimlich · 6 comments

System Information
Windows 7 64-bit

Blender Version
Broken: 51120ef

Short description of error
Selecting two bones in Pose Mode and trying to copy a custom property using the Copy to Selected option in the RMB menu seemingly does nothing at all.

Exact steps for others to reproduce the error
Create two bones, enter pose mode, give one bone a custom property, and then try to copy it to the second bone

**System Information** Windows 7 64-bit **Blender Version** Broken: 51120ef **Short description of error** Selecting two bones in Pose Mode and trying to copy a custom property using the Copy to Selected option in the RMB menu seemingly does nothing at all. **Exact steps for others to reproduce the error** Create two bones, enter pose mode, give one bone a custom property, and then try to copy it to the second bone
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @MatthewHeimlich

Added subscriber: @MatthewHeimlich
Author

After some further testing, it would appear that this option just doesn't work much in general.

After some further testing, it would appear that this option just doesn't work much in general.
Bastien Montagne self-assigned this 2014-08-12 16:11:02 +02:00

This issue was referenced by 561f375109

This issue was referenced by 561f375109c063663919e815b3c05c802e9428f8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 561f375109.

Closed by commit 561f375109.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41409
No description provided.