Fix T41409: Copy Custom Property function does nothing with pose bones.

Copying custom IDprops actually never worked, afaik, since previous code was copying 'from'
prop onto itself, in this case!